// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Expenses Summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $45.63
  </h1>
</div>
`;

exports[`should correctly render Expenses Summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    9
     
    expenses
     totalling 
    $45,634.56
  </h1>
</div>
`;
